@@ -1,5 +1,10 @@
 2004-05-13  Lassi A. Tuura  <lat@iki.fi>
 
+	* IgProf.cc (igkill): Lock only once we know we will handle this
+	signal to avoid dead-locking problems (e.g. with SIGPROF).
+
+2004-05-13  Lassi A. Tuura  <lat@iki.fi>
+
 	* IgProf.h: Turn off verbosity for proper usage.
 
 	* IgProf.h, IgProf.cc (IGPROF_ASSERT, IGPROF_TRACE, panic): New
